--- a/src/UI/limitcarusel.module.css
+++ b/src/UI/limitcarusel.module.css
@@ -106,7 +106,7 @@
 }
 .smallDivImg{
     width: 50%;
-    height: 100px;
+    height: 150px;
 
 }
 .smallDivImg img{
@@ -123,50 +123,40 @@
     padding: 10px 0px;
 }
 
+@media only screen and (max-width: 450px) {
+  
 
-/* _________________Swiper__________ */
-/* .swiper {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-  }
-  
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  .swiper-pagination-bullet {
-	background-color: #fff !important;
-	border: 1px solid grey !important;
-	width: 16px !important ;
-	height: 16px !important;
 }
 
-.swiper-pagination-bullet-active {
-	border: 1px solid #eda415 !important;
-	background-color: #eda415 !important;
-	width: 16px !important;
-	height: 16px !important;
+@media only screen and (max-width: 600px) {
+  
+   
+
 }
-.appp{
-    background-color: #eda415;
-} */
+
+@media only screen and (max-width: 768px) {
+    .container{
+        padding: 30px 0px;
+    }
+
+}
+
+@media only screen and (max-width: 992px) {
+    .bigdiv{
+        flex-direction: column;
+    }
+    .miniDivCarusel{
+        width: 100%;
+    }
+    .smallMiniDiv{
+        width: 100%;
+        margin: 10px 0px;
+    }
+
+
+}
+
+@media only screen and (min-width: 1200px) {
+
+}
+   
