--- a/src/UI/person.module.css
+++ b/src/UI/person.module.css
@@ -11,7 +11,7 @@
     padding: 50px 0px !important;
 }
 .minidiv{
-    width: 33%;
+    width: 100%;
     border: 1px solid rgba(128, 128, 128, 0.415);
     padding: 10px;
     border-radius: 20px;
@@ -41,3 +41,34 @@
     margin-top: 20px;
     line-height: 16px;
 }
+@media only screen and (max-width: 450px) {
+  
+
+}
+
+@media only screen and (max-width: 600px) {
+  
+   
+
+}
+
+@media only screen and (max-width: 768px) {
+    .container{
+        padding: 30px 0px;
+    }
+  
+
+
+}
+
+@media only screen and (max-width: 992px) {
+ 
+
+}
+
+@media only screen and (min-width: 1200px) {
+
+}
+   
+
+
