--- a/src/UI/spacingtech.module.css
+++ b/src/UI/spacingtech.module.css
@@ -9,3 +9,39 @@
     background-color: #E2F4FF;
     border-radius: 10px;
 }
+.bigdiv div{
+    width: 20%;
+    padding: 3px;
+}
+.bigdiv div img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+@media only screen and (max-width: 450px) {
+  
+
+}
+
+@media only screen and (max-width: 600px) {
+  
+   
+
+}
+
+@media only screen and (max-width: 768px) {
+    .container{
+        padding: 30px 0px;
+    }
+
+}
+
+@media only screen and (max-width: 992px) {
+ 
+
+}
+
+@media only screen and (min-width: 1200px) {
+
+}
+   
