--- a/src/UI/detail.module.css
+++ b/src/UI/detail.module.css
@@ -14,11 +14,18 @@
     height: 400px;
     border: 1px solid rgba(128, 128, 128, 0.653);
     border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.miniDivImgBig img{
+.miniDivImgBig1{
+    width: 50%;
+    height: 300px;
+}
+.miniDivImgBig1 img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 20px;
 }
 .miniDivImgMini{
@@ -36,7 +43,7 @@
 .miniDivImgMini1 img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 20px;
 }
 .detailText{
