--- a/src/UI/itemsSlider.css
+++ b/src/UI/itemsSlider.css
@@ -1,15 +1,21 @@
 .itemsSlideAllBox{
-    display: flex;
-    justify-content: space-around;
+    margin-top: 52px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 70px;
 }
 .itemsSlideBox{
-display: flex;
-align-items: center;
-gap: 10px;
-border: 1px solid #a5a5a5;
-border-radius: 20px;
-padding: 15px;
-width: 300px;
+    border: 1px solid #a5a5a5;
+	border-radius: 20px;
+	max-width: 381.63px !important;
+	width: 100%;
+	height: 147px;
+	display: flex;
+	margin: 20px;
+	align-items: center;
+	padding: 15px;
 }
 .itemsSlideleftBox > img{
     width: 100px;
