--- a/src/UI/navbar.css
+++ b/src/UI/navbar.css
@@ -29,6 +29,47 @@ ul > li{
 ul > img{
     padding:0 15px;
 }
+
+.toggle-button {
+	position: relative;
+	top: 0.75rem;
+	left: 1rem;
+	display: none;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 25px;
+	height: 21px;
+	cursor: pointer;
+}
+
+.bar {
+	height: 3px;
+	width: 100%;
+	background-color: black;
+	border-radius: 10px;
+}
+
+@media only screen and (max-width: 1076px) {
+	.toggle-button {
+		display: flex;
+	}
+
+	.navbar {
+		position: absolute;
+		flex-direction: column;
+		align-items: flex-start;
+		z-index: 2;
+		background-color: grey;
+		color: #fff;
+	}
+	.navbar li:hover {
+		background-color: rgb(107, 96, 96);
+	}
+}
+
+
+
+
 @media only screen and (max-width: 450px) {
   
 
